; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_network-address-lua.c_network_address_lua_push.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_network-address-lua.c_network_address_lua_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @network_address_lua_push(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @lua_pushnil(i32* %10)
  store i32 1, i32* %3, align 4
  br label %21

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32** @lua_newuserdata(i32* %13, i32 4)
  store i32** %14, i32*** %6, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load i32**, i32*** %6, align 8
  store i32* %15, i32** %16, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @network_address_lua_getmetatable(i32* %17)
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @lua_setmetatable(i32* %19, i32 -2)
  store i32 1, i32* %3, align 4
  br label %21

21:                                               ; preds = %12, %9
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32** @lua_newuserdata(i32*, i32) #1

declare dso_local i32 @network_address_lua_getmetatable(i32*) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
